
Data Changes:
- The Sound Link Audio Enhancement entry has had its sourcebook reference changed to RF 247, as it is the only place where the gear's price is listed.
- Barehanded Adept no longer shows "T, T (A)" after its name after it is added.

Changed/New Strings:
- Tip_SpellDrain
- Tip_SpellDrainBase
- Tip_ComplexFormFading
- Tip_ComplexFormFadingBase
- Message_UndoBrokenSkillGroup
- MessageTitle_UndoBrokenSkillGroup
- Label_OtherLiftAndCarryLimits
- Label_OtherLiftAndCarryLimitsFormat
- Tip_OtherLiftAndCarryLimits
- String_Encumbrance
- Label_CarriedWeight
- Label_CharacterOptions_WeightDecimalPlaces
- Label_CharacterOptions_LiftLimit
- Label_CharacterOptions_CarryLimit
- Label_CharacterOptions_EncumbranceIntervalLeft
- Label_CharacterOptions_EncumbranceIntervalRight
- Label_CharacterOptions_EncumbrancePenaltiesHeader
- Checkbox_CharacterOptions_EncumbrancePenaltyPhysicalLimit
- Checkbox_CharacterOptions_EncumbrancePenaltyMovementSpeed
- Checkbox_CharacterOptions_EncumbrancePenaltyAgility
- Checkbox_CharacterOptions_EncumbrancePenaltyReaction
- Checkbox_CharacterOptions_EncumbrancePenaltyWoundModifier
- Label_OtherLiftAndCarryHits
- Label_SelectBP_MaxNuyen
- Message_AttributeMaximum
- Message_TooManyAttributesAtMax
- Label_CharacterOptions_MaxNumberMaxAttributes
- Label_CharacterOptions_MaxSkillRating
- Label_CharacterOptions_MaxKnowledgeSkillRating

Removed Strings:
- Tip_LiftAndCarry
- Tip_WeaponInstalled

Build 221
Application Changes:
- Saved character settings files properly exclude disabled custom data directories that are present in the Chummer customdata folder.
- Added support for enabling individual items in Chummer on a case-by-case basis without needing to enable the entire sourcebook that contains them. Any item with a `<ignoresourcedisabled />` node inside of it can show up in Chummer regardless of whether or not its sourcebook is enabled.
- Fixed some crashes that could occur when opening characters under certain software conditions.